register react app with shell

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -51,7 +51,8 @@
       "imports": {
         "@app/root-config": "//localhost:9000/app-root-config.js",
         "login":"//localhost:4201/main.js",
-        "dashboard-app":"//localhost:4200/main.js"
+        "dashboard-app":"//localhost:4200/main.js",
+        "@react-app/react-app":"//localhost:8080/react-app-react-app.js"
         
       }
     }
