rip and replace bcyrpt with argon2 to ensure password matching and secure db storage of hashed pwd

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -11,10 +11,10 @@
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Last Name</mat-label>
+    <mat-label>passwrpd</mat-label>
     <input
       matInput
-      formControlName="lastName"
+      formControlName="password"
       placeholder="Enter your last name"
     />
   </mat-form-field>
