include source maps in builds, setup mfe routing from login to react mfe

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -6,16 +6,16 @@
     <input
       matInput
       formControlName="firstName"
-      placeholder="Enter your first name"
+      placeholder="Enter your  name"
     />
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>passwrpd</mat-label>
+    <mat-label>Password</mat-label>
     <input
       matInput
       formControlName="password"
-      placeholder="Enter your last name"
+      placeholder="Enter your password"
     />
   </mat-form-field>
 
